script not scripts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="loginWithSpotify">Login with Spotify</button>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
