--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <button id="loginWithSpotify">Login with Spotify</button>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        document.getElementById("loginWithSpotify").addEventListener("click", function() {
+            window.location.href = "redirect.html";
+        });
+    </script>
 </body>
 
 </html>
