--- a/redirect.html
+++ b/redirect.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirect Page</title>
+    <!-- Any other meta tags, styles, or links you want to include -->
+</head>
+
+<body>
+
+    <!-- Content of your redirect page -->
+
     <script src="script.js"></script>
+
+</body>
+
+</html>
