--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <button id="loginWithSpotify">Login with Spotify</button>
     </div>
 
-    <!-- <script>
+    <script>
         document.getElementById("loginWithSpotify").addEventListener("click", function() {
             window.location.href = "redirect.html";
         });
-    </script> -->
+    </script>
 </body>
 
 </html>
